# Asampl

./: .gitignore  .gitmodules  Asampl.cpp  Asampl.sln  CMakeLists.txt  ClassDiagram.cd  LICENSE  asampl.ebnf  main.cpp  test.asa
Asampl/: Asampl.cpp  Asampl.vcxproj  Asampl.vcxproj.filters  CMakeLists.txt  ClassDiagram.cd  a.out  asampl.ebnf  interpreter.h  lexer.cpp  main.as  main.asa  parser.cpp  print_ast.cpp  prog2.asa  tree.cpp
Asampl/include/: handler.h  handler_interface.h  interpreter.h  lexer.h  parser.h  print_ast.h  tree.h
Asampl/src/: CMakeLists.txt  handler.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  print_ast.cpp
data/: b.txt  g.txt  r.txt  strings.txt  taste.txt  test.ogv
examples/: array.asa  average.py  color_overlay.asa  main.asa  mix.asa  mix.py  new.asa  prog1.asa  python.asa  str.asa  taste.asa  taste_new.asa  test.asa  test1.asa
include/: ast.h  function.h  handler_interface.h  interpreter.h  lexer.h  matcher.h  matcher_impl.h  parser.h  pch.h  tree.h  utils.h  vt.h
include/interpreter/: call_conversion.h  exception.h  ffi_conversion.h  function.h  handler.h  image.h  library.h  test_stdlib.h  timeline.h  value.h  var_scope.h
src/: CMakeLists.txt  handler.cpp  interpreter.cpp  lexer.cpp  parser.cpp  tree.cpp
src/interpreter/: ffi_conversion.cpp  handler.cpp  library.cpp  test_stdlib.cpp  timeline.cpp  value.cpp  var_scope.cpp
src/interpreter/handler/: ffi.cpp  python.cpp
